# content-blocking.yaml
appId: com.duckduckgo.mobile.ios
tags:
    - iphone
    - release

---

# Set up 
- runFlow: 
    file: ../shared/setup.yaml

# Load Site
- assertVisible:
    id: "searchEntry"
- tapOn:
    id: "searchEntry"
- inputText: "https://privacy-test-pages.site/tracker-reporting/1major-via-script.html"
- pressKey: Enter

- assertVisible: "1 major tracker loaded via script src"
- tapOn: "Privacy Icon"
- assertVisible: "Protections are ON for this site"

- assertVisible: "We blocked Google Ads (Google) from loading tracking requests on this page."

- tapOn: "View Tracker Companies"
- assertVisible: "doubleclick.net"
- assertVisible: "Back"
- tapOn: "Back"

- assertVisible: "Disable Protections"
- tapOn: "Disable Protections"
- assertVisible: "Site not working? Let us know."
- assertVisible: "Don't Send"
- tapOn: "Don't Send"

- extendedWaitUntil:
    notVisible: "Nonsense text that won't exist"
    timeout: 2000

- assertVisible: "1 major tracker loaded via script src"

- tapOn: "Privacy Icon"
- assertVisible: "Protections are OFF for this site"
- tapOn: "Done"

- tapOn: "Browsing menu"
- scrollUntilVisible:
    element:
      text: "Enable Privacy Protection"
- tapOn: "Enable Privacy Protection"
- assertVisible: ".*Privacy Protection enabled for.*"
- assertVisible: "Undo"
- extendedWaitUntil:
    notVisible: "Undo"
    timeout: 8000
- tapOn: "Privacy Icon"
- assertVisible: "Protections are ON for this site"
- assertVisible: "We blocked Google Ads (Google) from loading tracking requests on this page."
- tapOn: "Done"

- tapOn: "Browsing menu"
- scrollUntilVisible:
    element:
      text: "Disable Privacy Protection"
- tapOn: "Disable Privacy Protection"
- assertVisible: ".*Privacy Protection disabled for.*"
- assertVisible: "Undo"
- extendedWaitUntil:
    notVisible: "Undo"
    timeout: 8000
- tapOn: "Privacy Icon"
- assertVisible: "Protections are OFF for this site"
- assertNotVisible: "We blocked Google Ads (Google) from loading tracking requests on this page."
- tapOn: "Done"

- tapOn: "Browsing menu"
- scrollUntilVisible:
    element:
      text: "Enable Privacy Protection"
- tapOn: "Enable Privacy Protection"
- assertVisible: ".*Privacy Protection enabled for.*"
- tapOn: "Undo"
- extendedWaitUntil:
    notVisible: "Undo"
    timeout: 8000
- tapOn: "Privacy Icon"
- assertVisible: "Protections are OFF for this site"
- assertNotVisible: "We blocked Google Ads (Google) from loading tracking requests on this page."

